--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,11 @@
   .input {
     @apply w-full dark:bg-dark_bg_2 p-1.5 dark:text-dark_text_1 rounded-lg flex-1 outline-none;
   }
+
+  .convos {
+    height: calc(100vh-220px);
+    overflow-y: scroll;
+  }
 }
 
 /* --------- Animations ----------- */
@@ -43,4 +48,18 @@
   0% {
     transform: rotate(-90deg);
   }
+}
+
+/* --------- Custome scrollbar ----------- */
+/* Width */
+.scrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+/* Track */
+.scrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+/* Thumb */
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: #444e54;
 }
