--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
     @apply w-[40px] h-[40px] rounded-full flex items-center justify-center active:bg-dark_hover_1;
   }
 
+  .btn_secondary {
+    @apply w-[45px] h-[45px] rounded-full flex items-center justify-center bg-dark_bg_2;
+  }
+
   .p16 {
     @apply px-[16px];
   }
